feature(bash_log): Изменил структуру проекта.
