# docs/swagger.yaml
@@ -1,6 +1,13 @@
 basePath: /api/v1
 definitions:
-  bash.Bash:
+  dto.ExecBashDTO:
+    properties:
+      id:
+        type: string
+      timeoutSeconds:
+        type: integer
+    type: object
+  model.Bash:
     properties:
       body:
         type: string
@@ -11,14 +18,7 @@ definitions:
       title:
         type: string
     type: object
-  bash.ExecBashDTO:
-    properties:
-      id:
-        type: string
-      timeoutSeconds:
-        type: integer
-    type: object
-  bashlog.BashLog:
+  model.BashLog:
     properties:
       bashId:
         type: string
@@ -67,7 +67,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/bash.Bash'
+            $ref: '#/definitions/model.Bash'
         "500":
           description: Internal Server Error
           schema:
@@ -90,7 +90,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/bash.Bash'
+            $ref: '#/definitions/model.Bash'
         "500":
           description: Internal Server Error
           schema:
@@ -138,7 +138,7 @@ paths:
         name: execute
         required: true
         schema:
-          $ref: '#/definitions/bash.ExecBashDTO'
+          $ref: '#/definitions/dto.ExecBashDTO'
       produces:
       - application/json
       responses:
@@ -171,7 +171,7 @@ paths:
         required: true
         schema:
           items:
-            $ref: '#/definitions/bash.ExecBashDTO'
+            $ref: '#/definitions/dto.ExecBashDTO'
           type: array
       produces:
       - application/json
@@ -197,7 +197,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/bash.Bash'
+              $ref: '#/definitions/model.Bash'
             type: array
         "500":
           description: Internal Server Error
@@ -222,7 +222,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/bashlog.BashLog'
+              $ref: '#/definitions/model.BashLog'
             type: array
         "500":
           description: Internal Server Error
