# internal/server/handler.go
@@ -1,8 +1,7 @@
 package server
 
 import (
-	bashV1 "pg-sh-scripts/internal/api/v1/bash"
-	bashLogV1 "pg-sh-scripts/internal/api/v1/bashlog"
+	v1 "pg-sh-scripts/internal/api/v1"
 	"pg-sh-scripts/internal/config"
 
 	"github.com/gin-gonic/gin"
@@ -11,9 +10,9 @@ import (
 func setV1Handlers(r *gin.Engine, cfg *config.Config) {
 	rg := r.Group(cfg.Api.Prefix)
 
-	bashV1Handler := bashV1.GetHandler()
+	bashV1Handler := v1.GetBashHandler()
 	bashV1Handler.Register(rg)
 
-	bashLogV1Handler := bashLogV1.GetHandler()
+	bashLogV1Handler := v1.GetBashLogHandler()
 	bashLogV1Handler.Register(rg)
 }
